GNOME Bugzilla – Bug 695131
gtkbin: initialize minimum and natural size to zero for when child is not visbile
Last modified: 2013-03-05 01:54:32 UTC
Created attachment 238002 [details] [review] set dummy size to zero before adjustments (also in between calls) The value of dummy was not zero in my debug session (could be very high numbers) and after first adjust dummy was negative . This affect mostly the gtk print window (all applications using gtk+ 3) and where the value tends to overflow the integer type and one ends up with high negative numbers. Though it could fix medium to minor adjustments for other widgets.
sorry wait :/ it seems the root was an issue in libgd size requesition (same issue not initialized values) . Because here it makes no sense the values of dummy are not used anywhere . Still investigating what has really fixed the issue here (I use gedit as a testcase). Also obviously it would only affect lbgd applications : I guess the issue with all the gtk applications was the glist change that broke the gtk cups backend and is already fixed.
got it. gd revealer use gtkbin size requisition . But if child of gtkbin is not visible gtkbin do only "*minimum_width += border ... " though minimum_width is nowhere iniitialized. I am testing and will send the patch in a few hours (which boils down to set minimum_ and natural_ width and height to zero at the start of the get_preferred_ functions so that even we never returns random values).
Created attachment 238028 [details] [review] initialize gtkbin minimum_ and natural_ width and height for when child is not viisble
Review of attachment 238028 [details] [review]: looks okay to me.